tests/type/errors/bad_add3.xi
foo() {
    x:int = {1,2} + {} + false
}